[package]
name = "rust-pcie-tlp"
version = "0.1.0"
edition = "2021"
authors = ["Liam Kalir <liam.kalir@proton.me>"]
license = "MIT"

[dependencies]
byteorder = {version = "1.4.3", default-features = false }
num-derive = "0.3.3"
num-traits = "0.2.15"

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
